<resources>
    <string name="app_name">Notes App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="email_or_pass">Email or Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account_sign_up">Dont have an account?</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_not_a_valid_mobile_no">Please enter a valid Mobile Number</string>
    <string name="error_not_a_valid_password">Please enter a valid Password</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_signin">Already have an account?</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>
    <string name="mobile">Mobile</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
=    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_data">No Data</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error_select_image">Please Select an image.</string>
    <string name="succes_updated">Successfully updated!</string>
    <string name="fill_all_fields">Please fill out all fields.</string>
    <string name="succes_add">Successfully added!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notes_list">Notes List</string>
    <string name="update">Update</string>
    <string name="description_length_toast">description character length should be between 100 and 1000</string>
    <string name="title_length_toast">description character length should be between 5 and 100</string>
    <string name="signin">Sign In</string>
    <string name="title_hint">Title here</string>
    <string name="description_hint">Description will go here if we have it</string>
</resources>