<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.tha.ui.noteslist.NotesListFragment"
        android:label="@string/notes_list" >
        <action
            android:id="@+id/action_listFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateNoteFragment"
            app:destination="@id/updateNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.example.tha.ui.add.AddNoteFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_note" >
        <action
            android:id="@+id/action_addNoteFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateNoteFragment"
        android:name="com.example.tha.ui.update.UpdateNoteFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update_note" >
        <action
            android:id="@+id/action_updateNoteFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="currentItem"
            app:argType="com.example.tha.data.models.Note" />
    </fragment>
</navigation>