<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.update.UpdateNoteFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:src="@drawable/camera_dialog" />

        <EditText
            android:id="@+id/current_title_et"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/custom_input"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/current_description_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:gravity="top|start"
        android:layout_marginTop="12dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="12dp"
        />

</LinearLayout>
