<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:id="@+id/choose_from_LLout"
    android:background="@color/white"
    android:paddingHorizontal="15dp"
    android:paddingVertical="25dp">


    <LinearLayout
        android:id="@+id/LL_decline_or_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_gallery"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/gallery_dialog"/>

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gallery"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAlignment="center"
                android:textSize="12dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_camera"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/camera_dialog"/>

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/camera"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAlignment="center"
                android:textSize="12dp"
                android:textColor="@color/black"/>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>
